<resources>
    <string name="app_name">装捌</string>
    <string name="go_zhuang_ba">进入装捌</string>
    <string name="log_in_to_your_account">登录您的账号</string>
    <string name="phone_number">手机号码</string>
    <string name="phone_number_hint">请输入手机号码</string>
    <string name="password_hint">请输入密码</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="please_confirm_password">请确认密码</string>
    <string name="login">登录</string>
    <string name="registered">注册账号</string>
    <string name="forget_password">忘记密码</string>
    <string name="register_your_account">注册您的账号</string>
    <string name="verification_code">验证码</string>
    <string name="please_input_verification_code">请输入验证码</string>
    <string name="get_the_authentication_code">获取验证码</string>
    <string name="next">下一步</string>
    <string name="login_immediately">有账号？</string>
    <string name="login_immediately_">立即登录</string>
    <string name="service_agreement">注册即表示您同意并遵守</string>
    <string name="service_agreement_">装捌隐私协议</string>
    <string name="agreement">服务协议</string>
    <string name="please_enter_your_cell_phone_number">请输入手机号</string>
    <string name="wallet_update_trade_input_error">当前输入手机号不是注册账号</string>
    <string name="incorrect_format_of_mobile_phone_number">手机号码格式不正确</string>
    <string name="verification_code_input_incorrectly">验证码输入不正确</string>
    <string name="set_your_password">设置您的密码</string>
    <string name="enter_app">进入APP</string>
    <string name="registered_success">注册成功，进入装捌吧！</string>
    <string name="password_settings_successful">密码设置成功!</string>
    <string name="go_login">去登陆</string>
    <string name="password_mismatch_entered_twice">两次输入的密码不匹配</string>
    <string name="min_pass_length">最少输入6位密码</string>
    <string name="max_pass_length">密码不能超过20位</string>
    <string name="please_input_pass">请输入密码</string>
    <string name="i_am_a_master_worker">我是师傅</string>
    <string name="i_am_an_employer">我是雇主</string>
    <string name="i_want_to_make_money">我要赚钱</string>
    <string name="i_want_to_send_out_the_demand">我要发布需求</string>
    <string name="logout">退出登录</string>
    <string name="re_login_tip">您的登录 信息已过期重新登录</string>
    <string name="re_login_tip_">您的账号已经在其他手机登陆了，如非本人操作，请及时修改密码，确保账号安全！</string>
    <string name="update_immediately">立即更新</string>
    <string name="no_more_prompts">不在提示</string>
    <string name="zero">0</string>
    <string name="down_load">下载中…</string>
    <string name="down_load_complete">下载完成</string>
    <string name="new_task">新任务</string>
    <string name="order_pool">订单池</string>
    <string name="need_to_be_dealt_with">安装单</string>
    <string name="ongoing_orders">进行中的订单</string>
    <string name="today_flowing">今日流水（元）</string>
    <string name="order_today">今日接单</string>
    <string name="finish_today">今日完成</string>
    <string name="unallocated_orders">未分配订单</string>
    <string name="pending_orders">待处理订单</string>
    <string name="time">预约时间：%1$s</string>
    <string name="task_number">共%1$s项</string>
    <string name="content_money">¥%1$s</string>
    <string name="asterisk">***</string>
    <string name="number">x%1$s</string>
    <string name="task_number_">数量：%1$s</string>
    <string name="in_distribution">分配中</string>
    <string name="received_orders">已接单</string>
    <string name="in_processing">处理中</string>
    <string name="check_and_accept">去验收</string>
    <string name="allocation_failed">分配失败</string>
    <string name="disposal_half_fillet">待处理</string>
    <string name="acceptance">验收中</string>
    <string name="having_set_out">已出发</string>
    <string name="be_under_construction">施工中</string>
    <string name="acceptance_is_not_acceptable">验收未通过</string>
    <string name="completed">已完成</string>
    <string name="cancelled">已取消</string>
    <string name="unpaid">未支付</string>
    <string name="apply_for_refund">申请退款</string>
    <string name="refunded">已退款</string>
    <string name="acceptance_is_not_acceptable_">验收不通过处理中</string>
    <string name="expired_">已过期</string>
    <string name="waiting_for_orders_">请在%1$s之前确认接单</string>
    <string name="expired">已在%1$s过期</string>
    <string name="timeout">已超时</string>
    <string name="not_data">新任务还在路上，\n请注意消息通知，以免错过接单时间哦</string>
    <string name="be_fully_equipped_for">安装师傅已经整装待发啦，\n快快发起需求吧～</string>
    <string name="search_empty">搜寻不到任何结果哦～</string>
    <string name="not_data_"> 请注意消息通知，以免错过接单时间哦</string>
    <string name="order_expired">该任务已过期</string>
    <string name="order_cancelled">该任务已取消</string>
    <string name="press_again_exit">再按一次退出</string>
    <string name="task_quantity">任务数量:</string>
    <string name="contacts">联系人:</string>
    <string name="contacts_">联系人：</string>
    <string name="time_of_appointment">预约时间</string>
    <string name="time_of_appointment_">预约时间:</string>
    <string name="service_items">服务项目</string>
    <string name="order_information">订单信息</string>
    <string name="waiting_for_orders">待接单</string>
    <string name="successful_payment_tip">正在寻找合适的师傅接单&#8230;</string>
    <string name="receipt">确认接单</string>
    <string name="order_detail">订单详情</string>
    <string name="change_information_restart">修改订单</string>
    <string name="cancel_order_employer_msg">取消后系统将不会再分配该任务给师傅,确认取消任务？</string>
    <string name="order_tip">本平台师傅配置现在仅覆盖县市区域，如果订单地址为乡镇或者偏远地区，可能涉及加价或者取消订单，加价范围100&#8211;500元/单，如果订单不能执行或者需要加价，平台会在接单后4小时内（以上班时间为准，上班时间8:30—18:00）跟您联系确认</string>
    <string name="cancel_order_employer_msg_">师傅已出发，此时取消订单将支付一定的补偿费用，详见协议 </string>
    <string name="cancel_the_order">取消接单</string>
    <string name="cancel_task">取消任务</string>
    <string name="proportion">订单中总金额¥%1$s，您当前分成比例为%2$s</string>
    <string name="proportion_">订单中总金额%1$s，您当前分成比例为%2$s</string>
    <string name="select_service">选择服务</string>
    <string name="individual">/个</string>
    <string name="individual_">x%1$s</string>
    <string name="service_acceptance_criteria">服务内容及验收标准</string>
    <string name="total">总计：</string>
    <string name="new_task_number">任务数%1$s个</string>
    <string name="empty">清空</string>
    <string name="selected_services">已选择的服务</string>
    <string name="on_site_contact_person">请填写施工现场联系人</string>
    <string name="name">姓名</string>
    <string name="click_input_name">点击输入姓名</string>
    <string name="phone">电话</string>
    <string name="click_input_phone">点击输入联系人电话号码</string>
    <string name="check_address">选择现场地址</string>
    <string name="service_address">服务地址</string>
    <string name="service_address_">服务地址：</string>
    <string name="click_check_address">点击选择服务地址</string>
    <string name="detailed_address">详细地址</string>
    <string name="click_input_detailed_address">点击输入详细地址</string>
    <string name="date">日期+时间</string>
    <string name="check_time">选择日期和时间</string>
    <string name="add_information">添加详细信息</string>
    <string name="update_information">更改信息</string>
    <string name="positioning_authority_tip">请在应用管理中打开定位权限</string>
    <string name="location_title">选择服务地点</string>
    <string name="search_hint">请输入你想要预约的服务地址</string>
    <string name="location_tip">暂时没有可获取数据</string>
    <string name="using_bai_du_map_navigation">使用百度地图导航</string>
    <string name="navigation_using_golden_map">使用高德地图导航</string>
    <string name="not_install_golden_map">没有安装高德地图客户端</string>
    <string name="not_install_bai_du_map">没有安装百度地图客户端</string>
    <string name="location_error">定位失败,请重新尝试,或稍后再试</string>
    <string name="location_error_code_failure_connection">定位失败,请检查设备网络是否通畅</string>
    <string name="location_error_code_failure_location_permission">请检查GPS定位服务是否开启</string>
    <string name="location_error_code_failure_no_enough_satellites">定位失败,GPS信号差,建议持设备到相对开阔的露天场所再次尝试</string>
    <string name="mobile_location_service_not_opened">手机未开启位置服务，请在设置-位置信息将位置服务打开</string>
    <string name="go_set_transaction">去设置</string>
    <string name="set_transaction">您当前还未设置安全密码，为了账户安全请先设置密码！</string>
    <string name="close">取消</string>
    <string name="ok">确定</string>
    <string name="check_time_date">选择日期和时间</string>
    <string name="please_input_name">请输入姓名</string>
    <string name="please_input_telephone">请输入电话</string>
    <string name="please_input_address">请输入地址</string>
    <string name="please_input_appointment_time">请选择预约时间</string>
    <string name="reservation_time_prompt">预约时间必须是两小时后的时间</string>
    <string name="order_code">订单编号</string>
    <string name="replace">更换</string>
    <string name="payment_method">支付方式</string>
    <string name="we_chat">微信</string>
    <string name="ali_pay">支付宝</string>
    <string name="amount_payable">应付金额</string>
    <string name="money_zero">¥0.0</string>
    <string name="go_payment">去支付</string>
    <string name="payment_details">支付详情</string>
    <string name="payment_success">支付成功</string>
    <string name="successful_pay">缴纳成功</string>
    <string name="successful_payment">付款成功</string>
    <string name="service_information">服务信息</string>
    <string name="contact_number">联系电话：</string>
    <string name="actual_payment">实付款：</string>
    <string name="mission_details">查看任务详情</string>
    <string name="back_to_home_page">返回首页</string>
    <string name="my">我的</string>
    <string name="my_maintenance">我的维保</string>
    <string name="historical_order">历史订单</string>
    <string name="view_order">可查看已完成的订单记录</string>
    <string name="set_up">设置</string>
    <string name="no_certification">未认证</string>
    <string name="total_project">项目总计：</string>
    <string name="update_password">修改密码</string>
    <string name="contact_us">联系我们</string>
    <string name="about">关于</string>
    <string name="edition">版本</string>
    <string name="reset_password">重置密码</string>
    <string name="user_phone">当前电话号码</string>
    <string name="input_verification_code">输入验证码</string>
    <string name="has_been_sent">验证码已通过短信发送至 %1$s</string>
    <string name="set_new_pass">设置新密码</string>
    <string name="enter_the_old_password">输入密码</string>
    <string name="input_password">再次确认密码</string>
    <string name="pass_update_success">密码修改成功</string>
    <string name="today_numbers">今日单数</string>
    <string name="today_income">今日收入</string>
    <string name="wallet">钱包</string>
    <string name="wallet_detail">明细</string>
    <string name="wallet_total_title">账户总额（元）</string>
    <string name="with_drawable_cash">可提现金额(元)</string>
    <string name="wallet_withdraw">提现</string>
    <string name="wallet_withdraw_account_manager">提现账号管理</string>
    <string name="wallet_withdraw_account_safe">账号安全</string>
    <string name="wallet_earnest_money">保证金</string>
    <string name="wallet_earnest_money_hint">保证金暂时被冻结，可以点击申请退保证金</string>
    <string name="wallet_income">收入</string>
    <string name="wallet_was_withdraw">已提现</string>
    <string name="number_of_teachers">总师傅数量</string>
    <string name="number_of_teachers_">总师傅数量(万)</string>
    <string name="order_quantity">总订单数量</string>
    <string name="order_quantity_">总订单数量(万)</string>
    <string name="task_amount">总任务金额(元)</string>
    <string name="task_amount_">总任务金额(万元)</string>
    <string name="wallet_detail_query">自定义查询</string>
    <string name="has_been_proposed">已提现</string>
    <string name="wallet_withdraw_detail">提现详情</string>
    <string name="wallet_income_detail">收入详情</string>
    <string name="more_information">更多信息</string>
    <string name="contract_number">合同编号</string>
    <string name="account_manager">客户经理</string>
    <string name="entry_name">项目名称</string>
    <string name="project_characteristics">项目特点</string>
    <string name="shop_name">店铺名称</string>
    <string name="please_enter_the_third_party_order_number">请输入第三方订单编号</string>
    <string name="please_enter_the_store_name">请输入店铺名称</string>
    <string name="please_enter_project_characteristics">请输入项目特点</string>
    <string name="please_enter_project_name">请输入项目名称</string>
    <string name="please_enter_account_manager_name">请输入客户经理姓名</string>
    <string name="please_enter_the_contract_number">请输入合同编号</string>
</resources>