<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">

    <TextView
        style="@style/login_registered_title"
        android:layout_alignTop="@+id/ivLoginBg"
        android:text="@string/set_your_password" />

    <TextView
        style="@style/login_registered_text"
        android:layout_alignBottom="@+id/ivLoginBg"
        android:text="@string/password" />

    <ImageView
        android:id="@+id/ivLoginBg"
        style="@style/login_registered_bg" />

    <com.xiaomai.zhuangba.weight.PasswordEditText
        android:id="@+id/editPassword"
        style="@style/base_editText"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:layout_below="@+id/ivLoginBg"
        android:hint="@string/password_hint"
        />

    <TextView
        android:id="@+id/tvConfirmPassword"
        style="@style/login_registered_text"
        android:layout_below="@+id/editPassword"
        android:layout_marginTop="@dimen/tool_lib_16dp"
        android:text="@string/confirm_password" />

    <com.xiaomai.zhuangba.weight.PasswordEditText
        android:id="@+id/editConfirmPassword"
        style="@style/base_editText"
        android:layout_below="@+id/tvConfirmPassword"
        android:hint="@string/please_confirm_password"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ" />

    <Button
        android:id="@+id/btnNext"
        style="@style/base_btn"
        android:layout_marginLeft="@dimen/tool_lib_38dp"
        android:layout_marginRight="@dimen/tool_lib_38dp"
        android:layout_below="@+id/editConfirmPassword"
        android:layout_marginTop="@dimen/tool_lib_30dp"
        android:enabled="false"
        android:text="@string/next" />


</RelativeLayout>