<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/ivLoginBg"
        style="@style/login_registered_bg" />

    <TextView
        style="@style/login_registered_title"
        android:layout_alignTop="@+id/ivLoginBg"
        android:text="@string/forget_password" />

    <TextView
        style="@style/login_registered_text"
        android:layout_alignBottom="@+id/ivLoginBg"
        android:text="@string/phone_number" />

    <EditText
        android:id="@+id/editUserNumber"
        style="@style/base_editText"
        android:layout_below="@+id/ivLoginBg"
        android:hint="@string/phone_number_hint"
        android:inputType="number"
        android:maxLength="11" />

    <TextView
        android:id="@+id/tvVerificationCode"
        style="@style/login_registered_text"
        android:layout_below="@+id/editUserNumber"
        android:layout_marginTop="@dimen/tool_lib_26dp"
        android:text="@string/verification_code" />

    <EditText
        android:id="@+id/editVerificationCode"
        style="@style/base_editText"
        android:layout_below="@+id/tvVerificationCode"
        android:hint="@string/please_input_verification_code"
        android:inputType="number"
        android:maxLength="8" />

    <com.example.toollib.weight.SingleCountDownView
        android:id="@+id/singleVerificationCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvVerificationCode"
        android:layout_alignBottom="@+id/editVerificationCode"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="@dimen/tool_lib_57dp"
        android:layout_marginRight="@dimen/tool_lib_57dp"
        android:gravity="center_vertical"
        android:text="@string/get_the_authentication_code"
        android:textColor="@color/tool_lib_orange_FFFF5C2B"
        android:textSize="@dimen/tool_lib_12sp" />

    <Button
        android:id="@+id/btnNext"
        style="@style/base_btn"
        android:layout_below="@+id/editVerificationCode"
        android:layout_marginLeft="@dimen/tool_lib_38dp"
        android:layout_marginTop="@dimen/tool_lib_30dp"
        android:layout_marginRight="@dimen/tool_lib_38dp"
        android:enabled="false"
        android:text="@string/next" />

</RelativeLayout>